--- a/william-profile/src/index.css
+++ b/william-profile/src/index.css
@@ -8,21 +8,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=en-NZ);
-height: 100%;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-/* backdrop-filter: blur(3px); */
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* backdrop-filter: blur(3px); */
 
 }
 
-p{
+p {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -30,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 
 span {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 
