--- a/william-profile/src/App.css
+++ b/william-profile/src/App.css
@@ -23,6 +23,10 @@ header, main, footer{
     -moz-box-shadow: 1px -1px 5px 0px rgba(0,0,0,0.75);
 }
 
+header{
+    display: flex;
+}
+
 
 main{
     flex: 1;
