--- a/william-profile/src/index.css
+++ b/william-profile/src/index.css
@@ -9,6 +9,8 @@ body {
 
   background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=en-NZ);
   height: 100%;
+  width: fit-content;
+  margin: 0 auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
