redesign the layout and color pattern

--- a/william-profile/src/App.css
+++ b/william-profile/src/App.css
@@ -1,26 +1,30 @@
 .container{
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items:center;
-    row-gap: 8px;
+    /* justify-content: left; */
+    /* align-items:center; */
+    /* row-gap: 8px; */
 }
 
 .maxContainer {
-  /* max-width: 1200px; */
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
-  border-radius: 8px;
-  row-gap: 8px;
+  max-width: 800px;
+  Width: 100%;
+  margin: 0 auto
+  /* margin: 0 auto; */
+  /* padding: 0 20px; */
+  /* border-radius: 8px; */
+  /* row-gap: 8px; */
+  /* background-color: aquamarine; */
 }
 
 header, main, footer{
-    backdrop-filter: blur(3px);
+    /* background-color: wheat; */
+    /* backdrop-filter: blur(3px);
     box-shadow: 1px -1px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px -1px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px -1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px -1px 5px 0px rgba(0,0,0,0.75); */
 }
 
 header{
