--- a/william-profile/src/index.css
+++ b/william-profile/src/index.css
@@ -1,19 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-body {
+html, body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=en-NZ);
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
+  margin: 0;
+  
+  /* max-width: 1200px; */
+  /* justify-content: center; */
+  /* margin: 0 auto; */
+  /* background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=en-NZ); */
+  /* height: 100%;
   width: fit-content;
-  margin: 0 auto;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   /* backdrop-filter: blur(3px); */
 
 }
