--- a/william-profile/src/components/layout.css
+++ b/william-profile/src/components/layout.css
@@ -38,6 +38,16 @@ header {
     flex: 1;
 }
 
+
+.headerContainer ul {
+    /* font-size: 1.5rem; */
+    font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 26px;
+}
+
 .homeContainer {
     display: flex;
     flex-direction: column;
