--- a/william-profile/src/components/layout.css
+++ b/william-profile/src/components/layout.css
@@ -30,6 +30,12 @@ header {
     background-color:  var(--black);
 }
 
+header img{
+    /* width: 100%; */
+    max-width: var(--header-height);
+    padding: 28px;
+}
+
 .headerContainer {
     display: flex;
     justify-content: center;
@@ -219,6 +225,11 @@ h2 {
     flex-direction: column;
     row-gap: 8px;
     text-align: left;
+}
+
+.footerLeft img{
+    padding: 26px;
+    width: 150px;
 }
 
 
