--- a/william-profile/src/components/layout.css
+++ b/william-profile/src/components/layout.css
@@ -1,6 +1,6 @@
 :root {
     --black: #0e0004;
-    --black2: #23231a;
+    --black2: #252627;
     /* --black2: #23231a; */
 
     --white: #f5f5f5;
@@ -96,6 +96,8 @@ header img{
 .headerLanguage{
 
     /* margin: auto 0; */
+    position: fixed;
+    right: 0;
     padding: 20px;
 }
 
@@ -120,7 +122,19 @@ h2 {
     text-align: center;
 }
 
+.projectTitle{
+    color: var(--primary);
+    font-size: 1.6rem;
+}
+
+.projectTitleTop{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .cardsTitle {
+    /* color: var(--primary); */
     font-size: 1.2rem;
     font-weight: 700;
 }
@@ -176,6 +190,7 @@ h2 {
     flex: row;
     flex-wrap: wrap;
     padding: 32px 16px;
+    margin: 32px 0;
     background-color: var(--black);
 }
 
@@ -195,15 +210,29 @@ h2 {
     min-width: 280px;
     text-align: left;
     text-wrap: wrap;
-    padding: 16px;
-    background-color: var(--primary);
-    border-radius: 4px;
+    padding: 24px;
+    border-radius: 16px;
+    border: 2px solid var(--primary);
     flex: 1;
     row-gap: 8px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    color: black;
+    background-color: var(--black2);
+    color: var(--white);
+}
+
+.projectCard p, li{
+    font-weight: 100;
+}
+
+.projectCard ul{
+    padding: 0 16px;
+    line-height: 26px;
+    list-style-type: square;
+}
+
+.projectCard h4, h5{
+    color: var(--primary);
 }
 
 /* About page style */
@@ -215,7 +244,7 @@ h2 {
 
 .topContainer {
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    grid-template-columns: 0.4fr 1fr;
 }
 
 .leftContainer {
@@ -231,6 +260,10 @@ h2 {
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.rightContainer p{
+    font-weight: 100 ;
 }
 
 .footerContainer {
@@ -269,6 +302,11 @@ h2 {
     row-gap: 8px;
     line-height: 24px;
     margin-right: 16px;
+}
+
+.contactInfo a{
+    color:var(--primary);
+    text-decoration: none;
 }
 
 
