--- a/william-profile/src/components/ProjectDetail.css
+++ b/william-profile/src/components/ProjectDetail.css
@@ -46,3 +46,19 @@
     border-radius: 16px;
     margin: 8px 0;
 }
+
+@media screen and (max-width: 490px){
+    .popupModal {
+        width: 100%;
+        min-height: 500px;
+        top: 50%; 
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: left;
+        text-wrap: wrap;
+        padding: 24px;
+        border-radius: 16px;
+        border: 3px solid var(--primary); 
+        background-color: var(--black2);
+    }
+}
