--- a/william-profile/src/components/ProjectDetail.css
+++ b/william-profile/src/components/ProjectDetail.css
@@ -9,9 +9,13 @@
     --secondary: #de9e36;
 }
 
+.popupContainer {
+  display: flex;
+  gap: 16px;
+}
+
 .popupContainer button {
     background-color: var(--primary);
-    /* color: smokewhite; */
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -29,6 +33,8 @@
     position: absolute;
     width: 100%;
     min-height: 500px;
+    max-height: 80%;
+    overflow: auto;
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
@@ -40,11 +46,45 @@
     background-color: var(--black2);
 }
 
-.popupModal img{
+/* .carouselContainer{
+    max-height: 400px;
+} */
+
+.carouselContainer img{
     width: 100%;
     height: auto;
     border-radius: 16px;
     margin: 8px 0;
+}
+
+.buttonContainer button{
+    float: right;
+    background-color: var(--primary);
+    padding: 8px 24px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    font-weight: 700;
+    border-radius: 10px;
+}
+
+.buttonDiv{
+    display: flex;
+    justify-content: space-between;
+}
+
+.popupModal button:hover{
+    background-color: var(--secondary);
+}
+
+.popupModal p{
+    font-weight: 100;
+    line-height: 1.5;
+}
+
+.popupModal h3{
+    line-height: 1.5;
+    margin-top: 8px;
 }
 
 @media screen and (max-width: 490px){
