adapt to mobile UI

--- a/william-profile/src/components/ProjectDetail.css
+++ b/william-profile/src/components/ProjectDetail.css
@@ -119,18 +119,16 @@
     gap: 16px;
 }
 
-/* .topButtonContainer button{
-    background-color: var(--primary);
-    padding: 8px 16px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 400;
-    border-radius: 10px;
-    transition: 300ms;
+@media screen and (max-width: 490px){
+    .popupModal{
+        width: 70%;
+        height: 60vh;
+    }
+    .detailContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .techContainer{
+        border-right: none;
+    }
 }
-
-.topButtonContainer button:hover{
-    background-color: var(--text-white);
-} */
