--- a/william-profile/public/styles.css
+++ b/william-profile/public/styles.css
@@ -1,32 +1,8 @@
-:root {
-    --black: #0e0004;
-    --black2: #252627;
 
-    --white: #f5f5f5;
-    --text-white: #eff2f1;
-    --header-height: 100px;
-    --primary: #ffbf46;
-    --secondary: #de9e36;
-}
-body {
-    background-color: var(--black);
-    color: var(--white);
-}
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    height: var(--header-height);
-    background-color:  var(--black);
-}
 
 
 ul a{
     cursor: pointer;
-    color: var(--white);
     text-decoration: none;
     line-height: 2;
     transition: 0.15s;
@@ -35,64 +11,14 @@ ul a{
 
 ul a:hover{
 
-    border-bottom: 2px solid var(--primary);
+    border-bottom: 2px solid;
 }
 
-header img{
-    width: var(--header-height);
-    padding: 28px;
-}
+
 
 .placeHolder {
     height: var(--header-height);
     visibility: hidden;
-}
-
-.headerContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 26px;
-    flex: 1;
-}
-
-
-.headerContainer ul {
-    font-weight: 700;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 26px;
-}
-
-.homeContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 32px;
-    padding: 20px;
-    margin-top: var(--header-height);
-}
-
-.homeContainer div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 8px;
-}
-
-.homeContainer p {
-    font-size: 1.5rem;
-    font-weight: 400;
-}
-
-.headerLanguage{
-
-    position: fixed;
-    right: 0;
-    padding: 20px;
 }
 
 
@@ -105,7 +31,6 @@ h1 {
 h2 {
     font-size: 3rem;
     font-weight: 100;
-    color: var(--primary);
     text-align: center;
     margin-bottom: 18px;
 }
@@ -117,7 +42,6 @@ h2 {
 }
 
 .projectTitle{
-    color: var(--primary);
     font-size: 1.6rem;
 }
 
@@ -143,7 +67,6 @@ h2 {
 /* Skill page style */
 .skillSetContainer {
     padding: 48px 16px;
-    background-color: var(--black2);
 }
 
 .innerStyle{
@@ -156,14 +79,12 @@ h2 {
     text-align: center;
     text-wrap: wrap;
     padding: 16px;
-    background-color: var(--primary);
     border-radius: 4px;
     flex: 1;
     row-gap: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: black;
 }
 
 .skillCard ul{
@@ -180,7 +101,6 @@ h2 {
     flex-wrap: wrap;
     padding: 32px 16px;
     margin: 32px 0;
-    background-color: var(--black);
 }
 
 .projectCardsHolder{
@@ -200,13 +120,11 @@ h2 {
     text-wrap: wrap;
     padding: 24px;
     border-radius: 16px;
-    border: 2px solid var(--primary);
+    border: 2px solid;
     flex: 1;
     row-gap: 8px;
     display: flex;
     flex-direction: column;
-    background-color: var(--black2);
-    color: var(--white);
 }
 
 .projectCard p, li{
@@ -220,12 +138,10 @@ h2 {
 }
 
 .projectCard h4, h5{
-    color: var(--primary);
 }
 
 /* About page style */
 .aboutContainer {
-    background-color: var(--black2);
     padding: 32px 16px;
     line-height: 24px;
 }
@@ -259,8 +175,6 @@ h2 {
     flex-direction: row;
     column-gap: 26px;
     padding: 16px;
-    background-color: var(--black);
-
 }
 
 .footerLeft {
@@ -293,13 +207,11 @@ h2 {
 }
 
 .contactInfo a{
-    color:var(--primary);
     text-decoration: none;
 }
 
 
 .copyright {
-    background-color: var(--black2);
     padding: 16px;
 }
 
