--- a/william-profile/src/App.css
+++ b/william-profile/src/App.css
@@ -1,13 +1,25 @@
+:root{
+    
+    --header-height: 100px;
+    --primary:#32AA27;
+    --secondary:#595959;
+    --text-white:#FFFFFF;
+    --text-black:#191923;
+    --background-color:#FFFFFF;
+    --background-color2:#EEF1EF;
+}
+
+
 .container{
     display: flex;
     flex-direction: column;
+    background-color: var(--background-color);
 }
 
 .maxContainer {
   max-width: 760px;
   Width: 100%;
   margin: 0 auto
-
 }
 
 header{
@@ -21,4 +33,22 @@ main{
 footer{
     justify-content: left;
     align-items: center;
+}
+
+h1{
+    font-size: 5rem;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 3rem;
+    font-weight: 100;
+    text-align: center;
+    margin-bottom: 18px;
+}
+
+.scetionTitle{
+    font-size: 1.6rem;
+    font-weight: 100;
+    text-align: center;
 }
