--- a/william-profile/src/App.css
+++ b/william-profile/src/App.css
@@ -41,22 +41,31 @@ h1{
     font-weight: 700;
 }
 
-h2 {
-    font-size: 3rem;
-    font-weight: 100;
+h2{
     text-align: center;
-    margin-bottom: 18px;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin: 16px 0;
+}
+
+h3{
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 8px 0;
 }
 
 p{
     font-size: 1.2rem;
     font-weight: 400;
+    text-align: left;
+    padding-left: 16px;
 }
 
-.scetionTitle{
-    font-size: 1.6rem;
-    font-weight: 100;
-    text-align: center;
+p, li{
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 8px 0;
 }
 
 @media screen and (max-width: 490px){
