--- a/william-profile/src/styles/ProjectPage.css
+++ b/william-profile/src/styles/ProjectPage.css
@@ -18,33 +18,9 @@
     align-items: center;
 }
 
-p{
-    text-align: left;
-    padding-left: 16px;
-}
-
-h2{
-    font-size: 2.5rem;
-    font-weight: 400;
-    margin: 16px 0;
-}
-
-h3{
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin: 8px 0;
-}
-
-p, li{
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.5;
-    margin: 8px 0;
-    padding: auto;
-}
 
 
-ul{
+.projectContainer ul{
     padding: 0 48px;
     list-style-type: square;
 }
