--- a/william-profile/src/styles/Footer.css
+++ b/william-profile/src/styles/Footer.css
@@ -55,3 +55,10 @@ footer{
     font-size: 24px;
     color: var(--text-color);
 }
+
+@media screen and (max-width: 490px){
+    .footerContainer{
+        display: flex;
+        flex-direction: column;
+    }
+}
