--- a/william-profile/src/App.css
+++ b/william-profile/src/App.css
@@ -2,7 +2,7 @@
     
     --header-height: 100px;
     --footer-height: 200px;
-    --primary:#32AA27;
+    --primary:#2857A4;
     --secondary:#595959;
     --text-white:#FFFFFF;
     --text-black:#191923;
@@ -66,6 +66,12 @@ p, li{
     font-weight: 400;
     line-height: 1.5;
     margin: 8px 0;
+}
+
+a{
+    text-decoration: none;
+    color: var(--primary);
+
 }
 
 @media screen and (max-width: 490px){
