--- a/william-profile/src/styles/ProjectPage.css
+++ b/william-profile/src/styles/ProjectPage.css
@@ -45,3 +45,18 @@
     flex-direction: column;
     padding: 8px 0;
 }
+
+@media screen and (max-width: 490px){
+    .overviewDetails{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 16px;
+    }
+    .featuresContainer{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 16px;
+    }
+}
